@@ -22,6 +22,7 @@ readsb (4.0.0~dev) UNRELEASED; urgency=medium
   * Trigger RRD update from readsb process through semaphore.
   * Improvement of SBS decoding. (by wiedehopf)
   * Add marker types for ground vehicles and towers.
+  * Add world magnetic model and geomagnetism calculation.
 
  -- Michael Wolf <michael@mictronics.de>  Fri, 14 Feb 2020 16:11:13 +0200
 
